# aerospace_chatbot

./: pyproject.toml  requirements.txt
scripts/: databutton_app.py  playground.ipynb  queries.py
scripts/pages/: 1_Chatbot_AMS_Langchain.py  2_Chatbot_AMS_Canopy.py
